--- a/index.html
+++ b/index.html
@@ -468,6 +468,26 @@
             </li>
           </ul>
         </div>
+        <!-- Subscribe -->
+        <div class="footer-subscribe">
+          <p class="form-title">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-subscribe-email" for="sub-form">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                id="sub-form"
+              />
+            </label>
+            <button type="submit" class="footer-button">
+              Subscribe<svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
