--- a/index.html
+++ b/index.html
@@ -490,5 +490,17 @@
         </div>
       </div>
     </footer>
+
+    <!-- =================  Modal ===================-->
+    <div class="modal-overlay is-open">
+      <div class="modal">
+        <button type="button" class="close-modal">
+          <svg class="close-button-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+      </div>
+    </div>
   </body>
 </html>
