--- a/index.html
+++ b/index.html
@@ -500,6 +500,52 @@
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-form-box">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-input-box">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-box">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-input-box">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-box">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-input-box">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-comment"></div>
+          <div class="modal-form-checkbox"></div>
+        </form>
       </div>
     </div>
   </body>
