--- a/index.html
+++ b/index.html
@@ -492,7 +492,8 @@
     </footer>
 
     <!-- =================  Modal ===================-->
-    <div class="modal-overlay is-open">
+    <!-- "modal-overlay is-open" -->
+    <div class="modal-overlay">
       <div class="modal">
         <button type="button" class="close-modal">
           <svg class="close-button-icon" width="8" height="8">
@@ -516,35 +517,61 @@
             </div>
           </div>
           <div class="modal-form-box">
-            <label class="modal-label" for="user-name">Name</label>
+            <label class="modal-label" for="user-phone">Phone</label>
             <div class="modal-input-box">
               <input
                 class="modal-input"
                 type="text"
-                name="user-name"
-                id="user-name"
+                name="user-phone"
+                id="user-phone"
               />
               <svg class="modal-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-person"></use>
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-box">
-            <label class="modal-label" for="user-name">Name</label>
+            <label class="modal-label" for="user-email">Email</label>
             <div class="modal-input-box">
               <input
                 class="modal-input"
                 type="text"
-                name="user-name"
-                id="user-name"
+                name="user-email"
+                id="user-email"
               />
               <svg class="modal-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-person"></use>
+                <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <div class="modal-form-comment"></div>
-          <div class="modal-form-checkbox"></div>
+          <div class="modal-form-comment">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="textarea"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-form-checkbox">
+            <input
+              class="checkbox-checked visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              value="true"
+              id="user-privacy"
+            />
+            <label class="checkbox-label" for="user-privacy">
+              <span class="modal-icon-checkbox">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="privacy-policy">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="send-button" type="submit">Send</button>
         </form>
       </div>
     </div>
