--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
     <!-- =================  Modal ===================-->
     <!-- "modal-overlay is-open" -->
-    <div class="modal-overlay">
+    <div class="modal-overlay is-open">
       <div class="modal">
         <button type="button" class="close-modal">
           <svg class="close-button-icon" width="8" height="8">
